assets/css/gallery.css
/* ... */
#banner p {
	-moz-transition: opacity 0.5s ease, -moz-transform 0.5s ease, -moz-filter 0.25s ease;
	-webkit-transition: opacity 0.5s ease, -webkit-transform 0.5s ease, -webkit-filter 0.25s ease;
	-ms-transition: opacity 0.5s ease, -ms-transform 0.5s ease, -ms-filter 0.25s ease;
	transition: opacity 0.5s ease, transform 0.5s ease, filter 0.25s ease;
	-moz-transform: translateX(0);
	-webkit-transform: translateX(0);
	-ms-transform: translateX(0);
	transform: translateX(0);
	-moz-transition-delay: 0.8s;
	-webkit-transition-delay: 0.8s;
	-ms-transition-delay: 0.8s;
	transition-delay: 0.8s;
	-moz-filter: blur(0);
	-webkit-filter: blur(0);
	-ms-filter: blur(0);
	filter: blur(0);
	opacity: 1;
	font-family: Raleway, Helvetica, sans-serif;
	font-size: 1.5em;
	font-weight: 200;
	letter-spacing: 0.1em;
	line-height: 2;
	text-transform: uppercase;
}

@media screen and (max-width: 1280px) {

	#banner {
		padding: 7em 0 8.25em 0;
		background-color: #2e3141;
		background-image: linear-gradient(to top, rgba(252, 169, 61, 0.164), rgba(255, 174, 0, 0.137)), url("../../images/banner.png");
		background-size: auto,
			cover;
		background-position: center,
			center;
		margin-bottom: -6.5em;
	}

}

@media screen and (max-width: 980px) {

	#banner {
		padding: 12em 3em 12.375em 3em;
		margin-bottom: -4.75em;
	}

	#banner .inner {
		width: 100%;
	}

}

@media screen and (max-width: 736px) {

	#banner {
		padding: 5em 2em 4.25em 2em;
		margin-bottom: -2.5em;
	}

	#banner .logo {
		margin: 0 0 1em 0;
	}

	#banner .logo .icon {
		font-size: 1.5em;
	}

	#banner h2 {
		font-size: 1.5em;
	}

	#banner p {
		font-size: 0.8em;
	}

}

body.is-preload #banner .logo {
	-moz-transform: translateY(0.5em);
	-webkit-transform: translateY(0.5em);
	-ms-transform: translateY(0.5em);
	transform: translateY(0.5em);
	opacity: 0;
}

body.is-preload #banner h2 {
	opacity: 0;
	-moz-transform: translateX(0.25em);
	-webkit-transform: translateX(0.25em);
	-ms-transform: translateX(0.25em);
	transform: translateX(0.25em);
	-moz-filter: blur(2px);
	-webkit-filter: blur(2px);
	-ms-filter: blur(2px);
	filter: blur(2px);
}

body.is-preload #banner p {
	opacity: 0;
	-moz-transform: translateX(0.5em);
	-webkit-transform: translateX(0.5em);
	-ms-transform: translateX(0.5em);
	transform: translateX(0.5em);
	-moz-filter: blur(2px);
	-webkit-filter: blur(2px);
	-ms-filter: blur(2px);
	filter: blur(2px);
}

/* Wrapper */

#wrapper>header {
	padding: 11em 0 2.25em 0;
}

#wrapper>header .inner {
	margin: 0 auto;
	width: 55em;
}

#wrapper>header h2 {
	border-bottom: solid 2px rgba(255, 255, 255, 0.125);
	font-size: 2em;
	margin-bottom: 0.8em;
	padding-bottom: 0.4em;
}

#wrapper>header p {
	font-family: Raleway, Helvetica, sans-serif;
	font-size: 1em;
	font-weight: 200;
	letter-spacing: 0.1em;
	line-height: 2;
	text-transform: uppercase;
}

@media screen and (max-width: 1280px) {

	#wrapper>header {
		padding: 9em 0 6.25em 0;
		background-color: #2e3141;
		background-image: linear-gradient(to top, rgba(252, 169, 61, 0.164), rgba(255, 174, 0, 0.137)), url("../../images/banner.png");
		background-size: auto,
			cover;
		background-position: center,
			0% 30%;
		margin-bottom: -6.5em;
	}

}

@media screen and (max-width: 980px) {

	#wrapper>header {
		padding: 11em 3em 7.375em 3em;
		background-size: auto,
			cover;
		background-position: center,
			0% 0%;
		margin-bottom: -4.75em;
	}

	#wrapper>header .inner {
		width: 100%;
	}

}

@media screen and (max-width: 736px) {

	#wrapper>header {
		padding: 6.5em 2em 3em 2em;
		background-size: auto,
			125%;
		margin-bottom: -2.5em;
	}

	#wrapper>header h2 {
		font-size: 1.25em;
	}

	#wrapper>header p {
		font-size: 0.8em;
	}

}


.wrapper {
	/* background-color: #2e3141; */
	background-color: #ffba54;
	margin: 6.5em 0;
	position: relative;
}

#wrapper #one.wrapper.style1.first:before{
	background-color: #ffba54;
}

/* #four .wrapper:before{
	background-color: #ffba54;
} */

/* #four.wrapper.alt.style1{
	background-color: #ffba54;
} */

/* #three.wrapper.spotlight.style3:after{
	background-color: #ffba54;
} */

/* .wrapper.alt.syle1:before
{ */
	/* background-color: #ffba54; */
	/* background-color: #ff0000;

} */

#four.wrapper.alt:before{
	/* background-color: #ffba54; */
	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpolygon points='0,100 100,0 100,100' style='fill:%23ffba54%3B' /%3E%3C/svg%3E");
	box-shadow: none;
}

#four.wrapper.alt:after {
	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpolygon points='0,100 100,0 100,100' style='fill:%23ffba54%3B' /%3E%3C/svg%3E");
	/* background-color: #ffba54; */
	box-shadow: none;
	
}

#four.wrapper.alt:after{
	/* background-color: #ffba54; */
}

.wrapper:before,
.wrapper:after {
	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cpolygon points='0,100 100,0 100,100' style='fill:%23ffba54%3B' /%3E%3C/svg%3E");
	/* background-color: #ffba54; */
	
}

.wrapper:before {
	/* box-shadow: inset 0 -1px 0 0 #2e3141, 0 1px 0 0 #2e3141; */
}

.wrapper:after {
	/* box-shadow: inset 0 -1px 0 0 #2e3141, 0 1px 0 0 #2e3141; */
}

html{
	scroll-behavior: smooth;;
  }

.wrapper:before,
.wrapper:after {
	background-repeat: no-repeat;
	background-size: 100% 100%;
	content: '';
	display: block;
	height: 6.5em;
	position: absolute;
	width: 100%;
}

.wrapper:before {
	left: 0;
	top: -6.5em;
}

.wrapper:after {
	-moz-transform: scaleY(-1);
	-webkit-transform: scaleY(-1);
	-ms-transform: scaleY(-1);
	transform: scaleY(-1);
	bottom: -6.5em;
	left: 0;
}

.wrapper.alt:before {
	-moz-transform: scaleX(-1);
	-webkit-transform: scaleX(-1);
	-ms-transform: scaleX(-1);
	transform: scaleX(-1);
}
/* ... */

